update contact info to encourage feedback

--- a/data/contact_info.html
+++ b/data/contact_info.html
@@ -1,2 +1,2 @@
-<p>Legal/operational inquiries: <a href="mailto:neo@seka.ing">neo@seka.ing</a></p>
-<p>Casual & questions: <code>aamia</code> on Discord (uid <code>142007603549962240</code>)</p>
+<p>For suggestions, questions, or casual talk, contact me on Discord: <code>aamia</code> (uid <code>142007603549962240</code>)</p>
+<p>For legal/operational inquiries: <a href="mailto:neo@seka.ing">neo@seka.ing</a></p>
