add helpful image to contact info

--- a/data/contact_info.html
+++ b/data/contact_info.html
@@ -1,2 +1,3 @@
 <p>For suggestions, questions, or casual talk, contact me on Discord: <code>aamia</code> (uid <code>142007603549962240</code>)</p>
+<img class="mb-4" style="width: 90%;" src="/assets/contact_info_me.png">
 <p>For legal/operational inquiries: <a href="mailto:neo@seka.ing">neo@seka.ing</a></p>
