--- a/public/index.html
+++ b/public/index.html
@@ -721,7 +721,7 @@
 								</button>
 							</div>
 							<div class="d-flex gap-2 justify-content-center mt-1">
-								<label class="form-check-label" for="heatmapTimezoneCb">EST (NeneRobo)</label>
+								<label class="form-check-label" for="heatmapTimezoneCb">ET (NeneRobo)</label>
 								<div class="form-check form-switch">
 									<input class="form-check-input" type="checkbox" role="switch" id="heatmapTimezoneCb">
 									<label class="form-check-label" for="heatmapTimezoneCb">Local timezone</label>
@@ -1529,7 +1529,7 @@
 				if(this.checked) {
 					renderHeatmap(new Date(startDate), new Date(endDate), new Date().getTimezoneOffset()/60, deltaTimeline)
 				} else {
-					renderHeatmap(new Date(startDate), new Date(endDate), 4, deltaTimeline)
+					renderHeatmap(new Date(startDate), new Date(endDate), currentEvent.start_tz_offsets.et/60, deltaTimeline)
 				}
 
 				localStorage.setItem("heatmapTimezone", this.checked.toString())
@@ -1537,7 +1537,7 @@
 			if(localStorage.getItem("heatmapTimezone") === "true") {
 				renderHeatmap(new Date(startDate), new Date(endDate), new Date().getTimezoneOffset()/60, deltaTimeline)
 			} else {
-				renderHeatmap(new Date(startDate), new Date(endDate), 4, deltaTimeline)
+				renderHeatmap(new Date(startDate), new Date(endDate), currentEvent.start_tz_offsets.et/60, deltaTimeline)
 			}
 
 			const cutoffStats = await cutoffPromise
