--- a/public/index.html
+++ b/public/index.html
@@ -747,7 +747,7 @@
 		if(document.location.hostname.startsWith("jp.")) {
 			document.title = `プロセカイベントトラッカー　｜　Sekaing`
 			document.getElementById("showBordersCbLabel").textContent = `ハイライトを表示する`
-			document.getElementById("compactModeCbLabel").textContent = `コンパｋトモード`
+			document.getElementById("compactModeCbLabel").textContent = `コンパクトモード`
 			document.getElementById("heatmapTimezoneCbContainer").classList.add("d-none")
 			document.getElementById("contactLb").classList.add("d-none")
 		}
