--- a/public/index.html
+++ b/public/index.html
@@ -749,6 +749,7 @@
 			document.getElementById("showBordersCbLabel").textContent = `ハイライトを表示する`
 			document.getElementById("compactModeCbLabel").textContent = `コンパクトモード`
 			document.getElementById("heatmapTimezoneCbContainer").classList.add("d-none")
+			document.getElementById("heatmapTimezoneCb").checked = true
 			document.getElementById("contactLb").classList.add("d-none")
 		}
 
