--- a/public/index.html
+++ b/public/index.html
@@ -722,8 +722,8 @@
 									<span>Copy</span>
 								</button>
 							</div>
-							<div id="heatmapTimezoneCbContainer" class="d-flex gap-2 justify-content-center mt-1">
-								<label class="form-check-label" for="heatmapTimezoneCb">ET (NeneRobo)</label>
+							<div class="d-flex gap-2 justify-content-center mt-1">
+								<label id="heatmapTimezoneLabel" class="form-check-label" for="heatmapTimezoneCb">ET (NeneRobo)</label>
 								<div class="form-check form-switch">
 									<input class="form-check-input" type="checkbox" role="switch" id="heatmapTimezoneCb">
 									<label class="form-check-label" for="heatmapTimezoneCb">Local timezone</label>
@@ -746,12 +746,13 @@
 	</footer>
 
 	<script>
+		let heatmapTimezone = "et"
 		if(document.location.hostname.startsWith("jp.")) {
 			document.title = `プロセカイベントトラッカー　｜　Sekaing`
 			document.getElementById("showBordersCbLabel").textContent = `ハイライトを表示する`
 			document.getElementById("compactModeCbLabel").textContent = `コンパクトモード`
-			document.getElementById("heatmapTimezoneCbContainer").classList.add("d-none")
-			document.getElementById("heatmapTimezoneCb").checked = true
+			document.getElementById("heatmapTimezoneLabel").textContent = `JST`
+			heatmapTimezone = "jst"
 			document.getElementById("contactLb").classList.add("d-none")
 		}
 
@@ -1549,7 +1550,7 @@
 				if(this.checked) {
 					renderHeatmap(new Date(startDate), new Date(endDate), new Date().getTimezoneOffset()/60, deltaTimeline)
 				} else {
-					renderHeatmap(new Date(startDate), new Date(endDate), currentEvent.start_tz_offsets.et/60, deltaTimeline)
+					renderHeatmap(new Date(startDate), new Date(endDate), currentEvent.start_tz_offsets[heatmapTimezone]/60, deltaTimeline)
 				}
 
 				localStorage.setItem("heatmapTimezone", this.checked.toString())
@@ -1557,7 +1558,7 @@
 			if(localStorage.getItem("heatmapTimezone") === "true") {
 				renderHeatmap(new Date(startDate), new Date(endDate), new Date().getTimezoneOffset()/60, deltaTimeline)
 			} else {
-				renderHeatmap(new Date(startDate), new Date(endDate), currentEvent.start_tz_offsets.et/60, deltaTimeline)
+				renderHeatmap(new Date(startDate), new Date(endDate), currentEvent.start_tz_offsets[heatmapTimezone]/60, deltaTimeline)
 			}
 
 			const cutoffStats = await cutoffPromise
