fix a wl chapters bug i just noticed

--- a/public/index.html
+++ b/public/index.html
@@ -1180,6 +1180,7 @@
 						document.getElementById(`eventTableChapter${chapter.num}CountdownLabel`).innerText = chapterStart.toLocaleString()
 					} else {
 						tbl.style.display = ""
+						document.getElementById(`eventTableChapter${chapter.num}Countdown`).style.display = "none"
 					}
 				}
 				
