frontend: make colors consistent

--- a/public/events/index.html
+++ b/public/events/index.html
@@ -184,8 +184,9 @@
 		}
 
 		.filter-btn.active {
-			background-color: #4a90e2;
-			border-color: #4a90e2;
+			background-color: #00ccbb;
+			border-color: #00ccbb;
+			color: #2a2a2a;
 		}
 
 		.event-card-id {
