optimize render-blocking requests

--- a/public/index.html
+++ b/public/index.html
@@ -116,11 +116,8 @@
 	</style>
 </head>
 <body class="d-flex flex-column justify-content-center align-items-center" style="min-height: 100%;">
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-	<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-	<script src="/assets/flipdown.min.js"></script>
-	<script src="/assets/countdown.min.js"></script>
-	<script src="/assets/updater.js"></script>
+	<script defer src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+	<script defer src="/assets/updater.js"></script>
 
 	<div class="sticky-top w-100">
 		<div id="announcementBanner" role="marquee" style="display: none; animation: fade-in-anim 0.5s linear 1;" class="announcement-banner slide-parent py-1 overflow-hidden">
@@ -826,6 +823,10 @@
 	<footer class="py-3">
 		<span id="contactLb">Contact: <a id="contactBtn" href="javascript:void(0)" data-bs-toggle="modal" data-bs-target="#contactModal">Show</a></span>
 	</footer>
+
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+	<script src="/assets/flipdown.min.js"></script>
+	<script src="/assets/countdown.min.js"></script>
 
 	<script>
 		let heatmapTimezone = "et"
