--- a/public/titles/index.html
+++ b/public/titles/index.html
@@ -127,7 +127,7 @@
 	</style>
 </head>
 <body class="d-flex flex-column justify-content-center align-items-center" style="min-height: 100%;">
-	<script src="/assets/updater.js"></script>
+	<script defer src="/assets/updater.js"></script>
 
 	<div class="row mt-5 w-100 justify-content-center">
 		<div class="select-container col-md-6 col-10 px-0 mb-4">
@@ -174,8 +174,6 @@
 			</div>
 		</div>
 	</div>
-
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
 	<footer class="mt-auto py-3">
 		<span>Contact: <a id="contactBtn" href="javascript:void(0)" data-bs-toggle="modal" data-bs-target="#contactModal">Show</a></span>
