add a devtools notice about api usage

--- a/public/index.html
+++ b/public/index.html
@@ -118,6 +118,7 @@
 <body class="d-flex flex-column justify-content-center align-items-center" style="min-height: 100%;">
 	<script defer src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 	<script defer src="/assets/updater.js"></script>
+	<script defer src="/assets/devtools_check.js"></script>
 
 	<div class="sticky-top w-100">
 		<div id="announcementBanner" role="marquee" style="display: none; animation: fade-in-anim 0.5s linear 1;" class="announcement-banner slide-parent py-1 overflow-hidden">
